<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    >

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/new_note_dialog_fragment_til_content"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:hint="@string/new_note"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_note_dialog_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remember_something"
        />
  </com.google.android.material.textfield.TextInputLayout>
  <Button
      android:id="@+id/new_note_dialog_fragment_btn_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/add_note"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/new_note_dialog_fragment_til_content"
      />
</androidx.constraintlayout.widget.ConstraintLayout>