<resources>
  <string name="app_name">My Notes</string>
  <string name="remember_something">Remember something</string>
  <string name="add_note">Add Note</string>
  <string name="noteMustNotBeEmpty">Note must not be empty</string>
  <string name="new_note">New Note</string>
</resources>
